--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "nImagePreloader",
+	"name": "nFileUploader",
 	"version": "1.0.0",
-	"description": "Nodes Image Preloader",
+	"description": "Nodes file uploader",
 	"homepage": "http://nodes.dk",
-	"author": "Tommy Jepsen",
+	"author": "",
 	"repository": {
 		"type": "git",
 		"url": ""
